@@ -1,27 +1,33 @@
 package com.cooobird.datatip.event;
 
-import com.mojang.blaze3d.platform.InputConstants;
-import net.minecraft.ChatFormatting;
-import net.minecraft.client.KeyMapping;
-import net.minecraft.client.Minecraft;
-import net.minecraft.network.chat.Component;
-import net.minecraft.world.item.ItemStack;
-import net.neoforged.api.distmarker.Dist;
-import net.neoforged.bus.api.SubscribeEvent;
-import net.neoforged.fml.common.EventBusSubscriber;
-import net.neoforged.neoforge.client.event.RegisterKeyMappingsEvent;
-import net.neoforged.neoforge.event.entity.player.ItemTooltipEvent;
 import com.cooobird.datatip.config.DatatipConfig;
 import com.cooobird.datatip.data.TooltipEntry;
 import com.cooobird.datatip.data.TooltipLoader;
 import com.cooobird.datatip.tooltip.TooltipMatcher;
 import com.cooobird.datatip.tooltip.TooltipRenderer;
+import com.mojang.blaze3d.platform.InputConstants;
+import com.mojang.logging.LogUtils;
+import net.minecraft.ChatFormatting;
+import net.minecraft.client.KeyMapping;
+import net.minecraft.client.Minecraft;
+import net.minecraft.network.chat.Component;
+import net.minecraft.world.item.ItemStack;
+import net.minecraftforge.api.distmarker.Dist;
+import net.minecraftforge.client.event.RegisterClientReloadListenersEvent;
+import net.minecraftforge.client.event.RegisterKeyMappingsEvent;
+import net.minecraftforge.event.entity.player.ItemTooltipEvent;
+import net.minecraftforge.eventbus.api.SubscribeEvent;
+import net.minecraftforge.fml.common.Mod;
+import org.slf4j.Logger;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.CompletableFuture;
 
-@EventBusSubscriber(value = Dist.CLIENT)
+@Mod.EventBusSubscriber(value = Dist.CLIENT)
 public class TooltipEventHandler {
+
+    private static final Logger LOGGER = LogUtils.getLogger();
 
     static final KeyMapping SHOW_TIP = new KeyMapping(
         "key.datatip.show_tip",
@@ -34,6 +40,20 @@ public class TooltipEventHandler {
     @SubscribeEvent
     public static void registerKeyMapping(RegisterKeyMappingsEvent event) {
         event.register(SHOW_TIP);
+    }
+
+    @SubscribeEvent
+    public static void onRegisterReloadListeners(RegisterClientReloadListenersEvent event) {
+        event.registerReloadListener((stage, rm, prepProf, reloadProf, bgExec, gameExec) -> {
+            LOGGER.info("DataTip reload triggered");
+            return CompletableFuture
+                .supplyAsync(() -> null, bgExec)
+                .thenCompose(stage::wait)
+                .thenRunAsync(() -> {
+                    LOGGER.info("DataTip marked dirty");
+                    LOADER.markDirty();
+                }, gameExec);
+        });
     }
 
     @SubscribeEvent
@@ -64,7 +84,7 @@ public class TooltipEventHandler {
 
         if (custom.isEmpty()) return;
 
-        if (matched.getFirst().prepend()) {
+        if (matched.get(0).prepend()) {
             event.getToolTip().addAll(1, custom);
         } else {
             event.getToolTip().addAll(custom);
